# gymlog_server

./: .env  .gitignore  Makefile  docker-compose.yml  gymlog_server_project_summary.txt  pyproject.toml
api/: docker-compose.yml
api/app/: main.py
api/app/models/: user.py
api/app/settings/: env.py
api/docker/api/: Dockerfile
app/: .env  db.py  main.py  model.py
app/auth/: utils.py
app/controllers/: ai_coach.py  exercise.py  muscle_group.py  user.py  workout_log.py
app/database/: alembic.ini  master_seeder.py
app/database/alembic/: env.py
app/database/alembic/versions/: 0253a1ed4b1c_create_workout_logs_table.py  6eac72362dc9_create_muscle_groups_table.py  9284736f660a_create_users_table.py  a113c052cd38_create_exercises_table.py
app/database/seeder/: exercises_seeder.py  muscle_groups_seeder.py  test_users_seeder.py
app/handlers/: user.py
app/libraries/repositories/: exercise.py  muscle_group.py  user.py  workout_log.py
app/libraries/usecases/ai_coach/: create_ai_advise.py
app/libraries/usecases/user/: create_user.py  get_current_user.py  login_user.py
app/libraries/usecases/workout_log/: create_workout_log.py
app/models/: exercise.py  exercises.py  muscle_group.py  user.py  workout_log.py  workout_logs.py
app/schemas/: ai_coach.py  exercise.py  muscle_group.py  user.py  workout_log.py
app/settings/: database.py  env.py  firebase.py  route.py
db/initdb.d/: create_test_user.sql  init_test_user.sql
docker/api/: Dockerfile
docker/db/: Dockerfile
docker/db/conf.d/: my.cnf
